--- a/app/globals.css
+++ b/app/globals.css
@@ -3,19 +3,51 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #99CDA7;
+  --foreground: #4A5568;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  height: 100vh;
 }
+
+header{
+  position: absolute;
+  right: 15%;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+header ul{
+  display: flex;
+  gap: 50px;
+}
+
+header li{
+  font-weight: bold;
+}
+.active{
+  color: var(--background);
+  text-shadow: 2px 2px 10px var(--foreground);
+}
+
+main{
+  padding-left: 15%;
+  padding-right: 15%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
