--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,11 @@
     --foreground: #ededed;
   }
 } */
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
   color: var(--foreground);
@@ -51,3 +56,12 @@ main{
   align-items: center;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  main{
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+  header{
+    right: 2%;
+  }
+}
