--- a/app/globals.css
+++ b/app/globals.css
@@ -26,25 +26,22 @@ body {
   height: 100vh;
 }
 
-header{
+.large_screen{
   position: absolute;
   right: 15%;
   height: 70px;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-header ul{
-  display: flex;
   gap: 50px;
 }
 
-header li{
+.link{
   font-weight: bold;
 }
 .active{
   color: var(--background);
+  font-weight: bold;
   text-shadow: 2px 2px 10px var(--foreground);
 }
 
@@ -56,12 +53,80 @@ main{
   align-items: center;
 }
 
+.menu{
+  display: none;
+}
+
+.mobile{
+  display: none;
+}
+
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   main{
     padding-left: 2%;
     padding-right: 2%;
   }
-  header{
+  .large_screen{
     right: 2%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  main{
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+  .large_screen{
+    display: none;
+  }
+  .mobile{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: auto;
+    background-color: var(--background);
+    color: var(--background);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  .z{
+    z-index: 1;
+  }
+  .mobile ul{
+    flex-direction: column;
+    width: 100%;
+    gap: 0;
+  }
+  .mobile li{
+    background-color: var(--foreground);
+    text-align: center;
+    height: 100%;
+  }
+  .motion{
+    width: 100%;
+    z-index: 1;
+    box-shadow: 0 0 10px var(--foreground);
+  }
+  .link{
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    padding: 30px 0;
+  }
+  .active{
+    display: inline-block;
+    background-color: var(--background);
+    text-shadow: none;
+    color: var(--foreground);
+    width: 100%;
+    height: 100%;
+    padding: 30px 0;
+  }
+  .menu{
+    display: block;
+    padding: 5% 1%;
+    color: var(--foreground);
   }
 }
