--- a/app/tools/tools.module.css
+++ b/app/tools/tools.module.css
@@ -1,7 +1,10 @@
 .tools{
+    width: 100%;
     height: 100vh;
+    display: flex;
     justify-content: center;
+    align-items: center;
 }
 .tools p{
-    font-size: 60px;
+    font-size: 3.2em;
 }
