--- a/app/about/about.module.css
+++ b/app/about/about.module.css
@@ -1,10 +1,128 @@
-.about{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.about {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.about p{
-    font-size: 3.2em;
+
+.about p {
+  font-size: 3.2em;
+}
+
+.contact_container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+
+.image_container {
+  position: relative;
+}
+
+.tooltiptext {
+  visibility: hidden;
+  width: 200px;
+  background-color: white;
+  color: black;
+  text-align: center;
+  font-size: 1em;
+  padding: 15px;
+  border-radius: 6px;
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  z-index: 1;
+}
+
+.image_container:hover .tooltiptext {
+  visibility: visible;
+}
+
+.tooltiptext::after {
+  content: " ";
+  position: absolute;
+  top: 100%;
+  left: 10%;
+  margin-left: -5px;
+  border-width: 10px;
+  border-style: solid;
+  border-color: white transparent transparent transparent;
+}
+
+.image {
+  width: 100%;
+  filter: drop-shadow(-15px 20px 10px rgba(0, 0, 0, 0.5));
+}
+
+.button {
+  width: 65%;
+  border: 1px solid var(--background);
+  box-shadow: 0 0 10px var(--foreground);
+  font-weight: 600;
+  padding: 10px 0;
+  border-radius: 20px;
+  animation: 0.7s zoominout infinite alternate;
+  outline: none;
+}
+
+.description_container {
+  width: 35%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5%;
+}
+
+.description {
+  width: 100%;
+  height: 500px;
+  border-radius: 60px;
+  padding: 40px;
+  box-shadow: 0 0 10px var(--foreground);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+}
+
+.text {
+  font-size: 1em;
+}
+
+.chevrons_container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 15px;
+}
+
+.chevrons {
+  box-shadow: 0 9px 10px var(--foreground);
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  outline: none;
+}
+
+.chevrons:active {
+  box-shadow: 0 4px 10px var(--foreground);
+  transform: translateY(4px);
+}
+
+@keyframes zoominout {
+  from {
+    transform: scale(0.9, 0.9);
+  }
+  to {
+    transform: scale(1, 1);
+  }
 }
