--- a/app/globals.css
+++ b/app/globals.css
@@ -3,17 +3,16 @@
 @tailwind utilities;
 
 :root {
-  --background: #99CDA7;
-  --foreground: #4A5568;
+  --background: #99cda7;
+  --foreground: #4a5568;
 }
 
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-} */
-*{
+::selection {
+  background-color: var(--foreground);
+  color: var(--background);
+}
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -26,7 +25,7 @@ body {
   height: 100vh;
 }
 
-.large_screen{
+.large_screen {
   position: absolute;
   right: 15%;
   height: 70px;
@@ -36,16 +35,16 @@ body {
   gap: 50px;
 }
 
-.link{
+.link {
   font-weight: bold;
 }
-.active{
+.active {
   color: var(--background);
   font-weight: bold;
   text-shadow: 2px 2px 10px var(--foreground);
 }
 
-main{
+main {
   padding-left: 15%;
   padding-right: 15%;
   display: flex;
@@ -53,33 +52,33 @@ main{
   align-items: center;
 }
 
-.menu{
+.menu {
   display: none;
 }
 
-.mobile{
+.mobile {
   display: none;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  main{
+  main {
     padding-left: 2%;
     padding-right: 2%;
   }
-  .large_screen{
+  .large_screen {
     right: 2%;
   }
 }
 
 @media screen and (max-width: 767px) {
-  main{
+  main {
     padding-left: 2%;
     padding-right: 2%;
   }
-  .large_screen{
+  .large_screen {
     display: none;
   }
-  .mobile{
+  .mobile {
     position: absolute;
     top: 0;
     right: 0;
@@ -91,31 +90,32 @@ main{
     flex-direction: column;
     align-items: flex-end;
   }
-  .z{
+  .z {
     z-index: 1;
   }
-  .mobile ul{
+  .mobile ul {
     flex-direction: column;
     width: 100%;
     gap: 0;
   }
-  .mobile li{
+  .mobile li {
     background-color: var(--foreground);
     text-align: center;
     height: 100%;
   }
-  .motion{
+  .motion {
     width: 100%;
     z-index: 1;
     box-shadow: 0 0 10px var(--foreground);
   }
-  .link{
+  .link {
     display: inline-block;
     width: 100%;
     height: 100%;
     padding: 30px 0;
+    border-bottom: 1px solid var(--background);
   }
-  .active{
+  .active {
     display: inline-block;
     background-color: var(--background);
     text-shadow: none;
@@ -124,7 +124,7 @@ main{
     height: 100%;
     padding: 30px 0;
   }
-  .menu{
+  .menu {
     display: block;
     padding: 5% 1%;
     color: var(--foreground);
