--- a/app/about/about.module.css
+++ b/app/about/about.module.css
@@ -2,12 +2,8 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-}
-
-.about p {
-  font-size: 3.2em;
 }
 
 .contact_container {
@@ -29,7 +25,7 @@
   background-color: white;
   color: black;
   text-align: center;
-  font-size: 1em;
+  font-size: 0.8em;
   padding: 15px;
   border-radius: 6px;
   position: absolute;
@@ -59,7 +55,8 @@
 }
 
 .button {
-  width: 65%;
+  width: 70%;
+  margin-right: 8%;
   border: 1px solid var(--background);
   box-shadow: 0 0 10px var(--foreground);
   font-weight: 600;
@@ -124,5 +121,66 @@
   }
   to {
     transform: scale(1, 1);
+  }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1330px) {
+  .description_container {
+    width: 50%;
+    height: 100vh;
+    justify-content: space-around;
+    margin-top: 70px;
+  }
+  .description {
+    gap: 0.2em;
+    padding: 20px;
+    height: 60%;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .description_container {
+    width: 50%;
+    height: 100%;
+  }
+  .description {
+    height: 65%;
+    padding: 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .about {
+    width: 100%;
+    height: 100%;
+    flex-direction: column-reverse;
+    margin-top: 20%;
+    align-items: flex-start;
+    /* margin-bottom: 50px; */
+    gap: 20px;
+  }
+  .description_container {
+    width: 100%;
+    height: 95vh;
+    /* margin-top: 20%; */
+    /* gap: 50px; */
+  }
+  .description {
+    height: 85%;
+  }
+  /* .contact_container{
+    height: auto;
+  } */
+  .image {
+    width: 200px;
+    display: none;
+  }
+  .button {
+    width: 100%;
+    margin: 0;
+    box-shadow: none;
+    animation: none;
+    padding: 0;
+    margin: 0;
   }
 }
