--- a/app/globals.css
+++ b/app/globals.css
@@ -27,18 +27,35 @@ body {
 
 .large_screen {
   position: absolute;
+  top: 20px;
   right: 15%;
-  height: 70px;
+  width: 20%;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 50px;
 }
-
+li {
+  flex: 1;
+  height: 100%;
+}
 .link {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
   font-weight: bold;
+  width: 100%;
+  height: 100%;
+}
+.link:hover {
+  text-decoration: 4px underline;
 }
 .active {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  height: 100%;
+  align-items: center;
   color: var(--background);
   font-weight: bold;
   text-shadow: 2px 2px 10px var(--foreground);
@@ -60,12 +77,24 @@ main {
   display: none;
 }
 
+@media screen and (min-width: 1024px) and (max-width: 1330px) {
+  main {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+  .large_screen {
+    width: 40%;
+    right: 5%;
+  }
+}
+
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   main {
     padding-left: 2%;
     padding-right: 2%;
   }
   .large_screen {
+    width: 50%;
     right: 2%;
   }
 }
@@ -79,7 +108,7 @@ main {
     display: none;
   }
   .mobile {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     width: 100%;
@@ -89,6 +118,12 @@ main {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    z-index: 1;
+  }
+  .burger {
+    position: absolute;
+    right: 0;
+    padding: 5% 1%;
   }
   .z {
     z-index: 1;
