--- a/app/home.module.css
+++ b/app/home.module.css
@@ -2,7 +2,7 @@
   height: 100vh;
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   gap: 50px;
 }
@@ -36,6 +36,18 @@
   font-size: 1em;
 }
 
+.button {
+  width: 30%;
+  margin-right: 8%;
+  border: 1px solid var(--background);
+  box-shadow: 0 0 10px var(--foreground);
+  font-weight: 600;
+  padding: 10px 0;
+  border-radius: 20px;
+  animation: 0.7s zoominout infinite alternate;
+  outline: none;
+}
+
 @keyframes zoominout {
   from {
     transform: scale(0.9, 0.9);
@@ -65,6 +77,11 @@
   .description {
     flex: 1;
   }
+  .button {
+    width: 35%;
+    margin: 0;
+  }
+
   @keyframes zoominout {
     from {
       transform: scale(0.7, 0.7);
@@ -88,9 +105,12 @@
   .homepage {
     flex-direction: column;
     justify-content: center;
-    gap: 20px;
+    gap: 10px;
   }
   .home_image {
+    width: 50%;
+  }
+  .button {
     width: 50%;
   }
 }
