--- a/app/about/about.module.css
+++ b/app/about/about.module.css
@@ -2,8 +2,12 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+}
+
+.about p {
+  font-size: 3.2em;
 }
 
 .contact_container {
@@ -152,10 +156,11 @@
 @media screen and (max-width: 767px) {
   .about {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     flex-direction: column-reverse;
-    margin-top: 20%;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
+    /* margin-top: 20%; */
     /* margin-bottom: 50px; */
     gap: 20px;
   }
