--- a/app/home.module.css
+++ b/app/home.module.css
@@ -2,7 +2,7 @@
   height: 100vh;
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   gap: 50px;
 }
@@ -44,7 +44,7 @@
   font-weight: 600;
   padding: 10px 0;
   border-radius: 20px;
-  animation: 0.7s zoominout infinite alternate;
+  /* animation: 0.7s zoominout infinite alternate; */
   outline: none;
 }
 
@@ -78,7 +78,7 @@
     flex: 1;
   }
   .button {
-    width: 35%;
+    width: 40%;
     margin: 0;
   }
 
