--- a/app/about/about.module.css
+++ b/app/about/about.module.css
@@ -2,12 +2,8 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-}
-
-.about p {
-  font-size: 3.2em;
 }
 
 .contact_container {
@@ -56,6 +52,10 @@
 .image {
   width: 100%;
   filter: drop-shadow(-15px 20px 10px rgba(0, 0, 0, 0.5));
+}
+
+.link:hover {
+  text-decoration: 2px underline;
 }
 
 .button {
@@ -130,25 +130,23 @@
 
 @media screen and (min-width: 1024px) and (max-width: 1330px) {
   .description_container {
-    width: 50%;
+    width: 35%;
     height: 100vh;
     justify-content: space-around;
-    margin-top: 70px;
   }
   .description {
     gap: 0.2em;
-    padding: 20px;
-    height: 60%;
+    padding: 30px;
+    height: auto;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .description_container {
     width: 50%;
-    height: 100%;
   }
   .description {
-    height: 65%;
+    height: auto;
     padding: 30px;
   }
 }
@@ -156,26 +154,20 @@
 @media screen and (max-width: 767px) {
   .about {
     width: 100%;
-    height: 100vh;
+    height: auto;
+    display: flex;
     flex-direction: column-reverse;
+    padding-top: 10vh;
+    align-items: flex-start;
     justify-content: center;
-    align-items: center;
-    /* margin-top: 20%; */
-    /* margin-bottom: 50px; */
-    gap: 20px;
   }
   .description_container {
     width: 100%;
-    height: 95vh;
-    /* margin-top: 20%; */
-    /* gap: 50px; */
+    height: 80vh;
   }
   .description {
-    height: 85%;
-  }
-  /* .contact_container{
     height: auto;
-  } */
+  }
   .image {
     width: 200px;
     display: none;
