--- a/app/globals.css
+++ b/app/globals.css
@@ -12,10 +12,21 @@
   color: var(--background);
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scrollbar-width: none;
+}
+
+html {
+  scroll-behavior: smooth;
+  scrollbar-width: thin;
+  scrollbar-color: var(--background) var(--foreground);
 }
 
 body {
@@ -25,14 +36,20 @@ body {
   height: 100vh;
 }
 
-.large_screen {
-  position: absolute;
-  top: 20px;
-  right: 15%;
-  width: 20%;
-  height: 50px;
+header {
+  width: 100vw;
+  height: 10%;
+  background-color: var(--background);
+  position: fixed;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
+}
+
+.large_screen {
+  height: 100%;
+  width: 35%;
+  margin-right: 15%;
+  display: flex;
   align-items: center;
 }
 li {
@@ -53,9 +70,9 @@ li {
 .active {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   width: 100%;
   height: 100%;
-  align-items: center;
   color: var(--background);
   font-weight: bold;
   text-shadow: 2px 2px 10px var(--foreground);
@@ -65,6 +82,7 @@ main {
   padding-left: 15%;
   padding-right: 15%;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
 }
@@ -79,12 +97,12 @@ main {
 
 @media screen and (min-width: 1024px) and (max-width: 1330px) {
   main {
-    padding-left: 5%;
-    padding-right: 5%;
+    padding-left: 10%;
+    padding-right: 10%;
   }
   .large_screen {
+    margin-right: 10%;
     width: 40%;
-    right: 5%;
   }
 }
 
@@ -95,7 +113,7 @@ main {
   }
   .large_screen {
     width: 50%;
-    right: 2%;
+    margin-right: 2%;
   }
 }
 
@@ -103,6 +121,12 @@ main {
   main {
     padding-left: 2%;
     padding-right: 2%;
+  }
+  header {
+    width: 10%;
+    background: none;
+    right: 0;
+    padding: 5% 1%;
   }
   .large_screen {
     display: none;
@@ -112,7 +136,7 @@ main {
     top: 0;
     right: 0;
     width: 100%;
-    height: auto;
+    height: 20vh;
     background-color: var(--background);
     color: var(--background);
     display: flex;
@@ -120,11 +144,11 @@ main {
     align-items: flex-end;
     z-index: 1;
   }
-  .burger {
+  /* .burger {
     position: absolute;
     right: 0;
     padding: 5% 1%;
-  }
+  } */
   .z {
     z-index: 1;
   }
