--- a/app/home.module.css
+++ b/app/home.module.css
@@ -14,6 +14,7 @@
   filter: drop-shadow(0px 20px 14px rgba(0, 0, 0, 0.5));
   animation: 0.7s zoominout infinite alternate;
   filter: brightness(80%);
+  z-index: -1;
 }
 
 .description {
