--- a/app/about/about.module.css
+++ b/app/about/about.module.css
@@ -1,9 +1,14 @@
-.about {
+.section {
   width: 100%;
   height: 100vh;
   display: flex;
+  flex-direction: row-reverse;
   justify-content: space-between;
   align-items: center;
+}
+
+.about_title {
+  display: none;
 }
 
 .contact_container {
@@ -149,21 +154,49 @@
     height: auto;
     padding: 30px;
   }
+  .tooltiptext {
+    left: 10%;
+  }
+  .tooltiptext::after {
+    left: 50%;
+  }
 }
 
 @media screen and (max-width: 767px) {
   .about {
+    margin: 15% 0;
+  }
+  .section {
     width: 100%;
     height: auto;
     display: flex;
     flex-direction: column-reverse;
-    padding-top: 10vh;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: flex-start;
+    gap: 10px;
+
+    padding: 0 2%;
+  }
+  .about_title {
+    display: block;
+    position: sticky;
+    top: 0;
+    padding: 5% 2%;
+    margin: 0;
+    height: auto;
+    font-weight: bold;
+    font-size: 2.5em;
+    align-self: flex-start;
+    width: 100%;
+    background-color: var(--background);
+  }
+  .contact_container {
+    flex-direction: column;
   }
   .description_container {
     width: 100%;
-    height: 80vh;
+    height: 100%;
+    padding: 15% 0;
   }
   .description {
     height: auto;
