--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,9 @@
 @tailwind utilities;
 
 :root {
-  --background: #99cda7;
+  --background: #80a5d0;
   --foreground: #4a5568;
+  --white: #fff;
 }
 
 ::selection {
@@ -25,7 +26,7 @@
 
 html {
   scroll-behavior: smooth;
-  scrollbar-width: thin;
+  /* scrollbar-width: thin; */
   scrollbar-color: var(--background) var(--foreground);
 }
 
@@ -43,6 +44,7 @@ header {
   position: fixed;
   display: flex;
   justify-content: flex-end;
+  z-index: 1;
 }
 
 .large_screen {
@@ -56,23 +58,23 @@ li {
   flex: 1;
   height: 100%;
 }
-.link {
+.link,
+.active {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
-  font-weight: bold;
   width: 100%;
   height: 100%;
+  font-weight: bold;
+}
+.link:focus,
+.active:focus {
+  outline: none;
 }
 .link:hover {
   text-decoration: 4px underline;
 }
 .active {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  width: 100%;
-  height: 100%;
   color: var(--background);
   font-weight: bold;
   text-shadow: 2px 2px 10px var(--foreground);
@@ -119,8 +121,8 @@ main {
 
 @media screen and (max-width: 767px) {
   main {
-    padding-left: 2%;
-    padding-right: 2%;
+    padding-left: 0;
+    padding-right: 0;
   }
   header {
     width: 10%;
@@ -186,6 +188,7 @@ main {
   .menu {
     display: block;
     padding: 5% 1%;
+    z-index: 1;
     color: var(--foreground);
   }
 }
