--- a/app/home.module.css
+++ b/app/home.module.css
@@ -5,15 +5,16 @@
   justify-content: space-between;
   align-items: center;
   gap: 50px;
+  padding: 0 2%;
 }
 
 .home_image {
   width: 35%;
   display: inline-block;
   border-radius: 180px;
-  filter: drop-shadow(0px 20px 14px rgba(0, 0, 0, 0.5));
+  filter: drop-shadow(-15px 20px 14px rgba(0, 0, 0, 0.5)) brightness(80%);
   animation: 0.7s zoominout infinite alternate;
-  filter: brightness(80%);
+  /* filter: ; */
   z-index: -1;
 }
 
