Working on project screen

--- a/app/about/about.module.css
+++ b/app/about/about.module.css
@@ -134,8 +134,11 @@
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1330px) {
+  .section {
+    padding: 0;
+  }
   .description_container {
-    width: 35%;
+    width: 40%;
     height: 100vh;
     justify-content: space-around;
   }
@@ -147,8 +150,11 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
+  .section {
+    padding: 0 1%;
+  }
   .description_container {
-    width: 50%;
+    width: 45%;
   }
   .description {
     height: auto;
@@ -174,7 +180,6 @@
     align-items: flex-start;
     justify-content: flex-start;
     gap: 10px;
-
     padding: 0 2%;
   }
   .about_title {
