--- a/app/globals.css
+++ b/app/globals.css
@@ -40,7 +40,7 @@ body {
 header {
   width: 100vw;
   height: 10%;
-  background-color: var(--background);
+  /* background-color: var(--background); */
   position: fixed;
   display: flex;
   justify-content: flex-end;
@@ -81,12 +81,11 @@ li {
 }
 
 main {
-  padding-left: 15%;
-  padding-right: 15%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  padding: 0 15%;
 }
 
 .menu {
@@ -99,8 +98,7 @@ main {
 
 @media screen and (min-width: 1024px) and (max-width: 1330px) {
   main {
-    padding-left: 10%;
-    padding-right: 10%;
+    padding: 0 10%;
   }
   .large_screen {
     margin-right: 10%;
@@ -121,8 +119,7 @@ main {
 
 @media screen and (max-width: 767px) {
   main {
-    padding-left: 0;
-    padding-right: 0;
+    padding: 0;
   }
   header {
     width: 10%;
