--- a/app/home.module.css
+++ b/app/home.module.css
@@ -5,7 +5,6 @@
   justify-content: space-between;
   align-items: center;
   gap: 50px;
-  padding: 0 2%;
 }
 
 .home_image {
@@ -40,6 +39,9 @@
 
 .button {
   width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-right: 8%;
   border: 1px solid var(--background);
   box-shadow: 0 0 10px var(--foreground);
@@ -68,6 +70,15 @@
   }
 }
 
+@media screen and (min-width: 1024px) and (max-width: 1330px) {
+  .homepage {
+    padding: 0;
+  }
+  .button {
+    width: 50%;
+  }
+}
+
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .homepage {
     gap: 30px;
@@ -80,7 +91,7 @@
     flex: 1;
   }
   .button {
-    width: 40%;
+    width: 50%;
     margin: 0;
   }
 
@@ -108,6 +119,7 @@
     flex-direction: column;
     justify-content: center;
     gap: 10px;
+    padding: 0 2%;
   }
   .home_image {
     width: 50%;
