--- a/app/projects/projects.module.css
+++ b/app/projects/projects.module.css
@@ -1,10 +1,298 @@
 .projects {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.projects p {
+/* .projects p {
   font-size: 3.2em;
+} */
+.project,
+.detail {
+  width: 25%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: height 1.5s linear;
+}
+.detail {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: #04724d;
+}
+.presentation,
+.detail_view {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: inherit;
+  gap: 0;
+  padding: 20%;
+  transition:
+    height 1s ease,
+    gap 0.5s ease;
+}
+.detail_view {
+  padding: 1%;
+  justify-content: space-between;
+  color: #fbfbfb;
+  height: 100%;
+  /* gap: 0; */
+}
+.description {
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.image {
+  transform: scale(0, 0);
+  transition: transform 0.5s ease;
+  box-shadow: 0 0 20px var(--foreground);
+}
+.project:hover {
+  height: auto;
+}
+.project:hover .image {
+  transform: scale(1, 1);
+  transition: transform 0.5s ease;
+}
+.project:hover .presentation {
+  height: 100%;
+  color: #fbfbfb;
+  gap: 150px;
+}
+.project:hover .button {
+  border-color: #fbfbfb;
+}
+.title {
+  font-size: 2.5em;
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+}
+.title span {
+  font-weight: normal;
+  font-size: 0.7em;
+}
+/* .button_container{
+  border: 1px solid red;
+} */
+.detail .button {
+  border-color: #fbfbfb;
+}
+.button {
+  width: 100%;
+  height: 70px;
+  border: 1px solid var(--foreground);
+  border-radius: 30px;
+  font-size: 1.2em;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.detail .up {
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 5%;
+  position: relative;
+}
+.detail .up p {
+  font-size: 1em;
+  font-weight: bold;
+  position: absolute;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+  display: block;
+}
+.detail .image {
+  width: 45%;
+  border-radius: 30px;
+  transform: scale(1, 1);
+  transition: transform 0.5s ease;
+}
+.detail .details {
+  display: block;
+  font-size: 1em;
+}
+.detail .description {
+  width: 25%;
+  height: 100%;
+  animation: descript 2s ease-out;
+}
+.detail .down {
+  height: 50%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+.detail .aside {
+  height: 165px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  animation: go_down 6s ease-out;
+}
+.detail .clickable,
+.detail .tooltip {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 20px var(--foreground);
+}
+.detail .tooltip {
+  position: relative;
+}
+.tooltip:hover .tooltiptext {
+  opacity: 1;
+}
+.tooltiptext {
+  opacity: 0;
+  width: 200px;
+  background-color: white;
+  color: var(--foreground);
+  text-align: center;
+  font-size: 0.8em;
+  padding: 15px;
+  border-radius: 6px;
+  position: absolute;
+  bottom: 50%;
+  right: 120%;
+  margin-left: -180px;
+  transition: opacity 2s;
+  z-index: 1;
+  box-shadow: 0 0 20px var(--foreground);
+}
+.tooltiptext::after {
+  content: " ";
+  position: absolute;
+  left: 100%;
+  top: 70%;
+  /* margin-left: -5px; */
+  border-width: 10px;
+  border-style: solid;
+  border-color: transparent transparent transparent white;
+}
+.up p {
+  display: none;
+  position: relative;
+}
+/* .up{
+  display: flex;
+  gap: 20px;
+  margin-top: 5%;
+  border: 1px solid red;
+  position: relative;
+}
+.up p{
+  font-size: 1em;
+  font-weight: bold;
+  color: #fbfbfb;
+} */
+.details,
+.aside {
+  display: none;
+}
+.project:nth-child(1):hover {
+  /* position: absolute; */
+  height: 100%;
+  /* width: 100%; */
+  background-color: #04724d;
+}
+/* .project:nth-child(1):hover .presentation{
+  padding: 1%;
+  justify-content: space-between;
+  gap: 0;
+}
+.project:nth-child(1):hover .up{
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 5%;
+  position: relative;
+}
+.project:nth-child(1):hover .up p{
+  font-size: 1em;
+  font-weight: bold;
+  color: #fbfbfb;
+  position: absolute;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+  display: block;
+}
+.project:nth-child(1):hover .image{
+  width: 50%;
+  border-radius: 30px;
+}
+.project:nth-child(1):hover .details{
+  display: block;
+  font-size: 1em;
+}
+.project:nth-child(1):hover .description{
+  width: 25%;
+  height: 100%;
+  animation: descript 2s ease-out;
+}
+.project:nth-child(1):hover .down{
+  height: 50%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+.project:nth-child(1):hover .aside{
+  border: 1px solid #04724D;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 20px var(--foreground);
+  animation: go_down 6s ease-out;
+}
+ */
+@keyframes go_down {
+  from {
+    transform: translateY(-1500px);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
+@keyframes descript {
+  from {
+    transform: scale(0, 0);
+  }
+  to {
+    transform: scale(1, 1);
+  }
+}
+
+.project:nth-child(2):hover {
+  height: 100%;
+  background-color: #00bcd4;
+}
+.project:nth-child(3):hover {
+  height: 100%;
+  background-color: #001f54;
+}
+.project:nth-child(4):hover {
+  height: 100%;
+  background-color: #1e3a8a;
 }
