--- a/app/tools/tools.module.css
+++ b/app/tools/tools.module.css
@@ -154,6 +154,9 @@
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1330px) {
+  .tools {
+    padding: 5% 0 0;
+  }
   .tools h2 {
     font-size: 1.6em;
   }
@@ -196,7 +199,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .tools {
-    padding-top: 15%;
+    padding: 10% 0 0;
     gap: 5%;
   }
   .left,
