--- a/app/about/about.module.css
+++ b/app/about/about.module.css
@@ -147,11 +147,27 @@
     padding: 30px;
     height: auto;
   }
+  .image {
+    width: 75%;
+  }
+  .image_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .button {
+    margin: 0;
+  }
+  .contact_container {
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .section {
-    padding: 0 1%;
+    padding: 0 2%;
   }
   .description_container {
     width: 45%;
