--- a/app/globals.css
+++ b/app/globals.css
@@ -38,7 +38,7 @@ body {
 }
 
 header {
-  width: 100vw;
+  width: 100%;
   height: 10%;
   /* background-color: var(--background); */
   position: fixed;
@@ -108,12 +108,11 @@ main {
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   main {
-    padding-left: 2%;
-    padding-right: 2%;
+    padding: 0%;
   }
   .large_screen {
     width: 50%;
-    margin-right: 2%;
+    margin-right: 0%;
   }
 }
 
