--- a/app/projects/projects.module.css
+++ b/app/projects/projects.module.css
@@ -119,7 +119,15 @@
   width: 45%;
   border-radius: 30px;
   transform: scale(1, 1);
-  transition: transform 0.5s ease;
+  animation: zoom_in_image 2s ease-out;
+}
+@keyframes zoom_in_image {
+  from {
+    transform: scale(0, 0);
+  }
+  to {
+    transform: scale(1, 1);
+  }
 }
 .detail .details {
   display: block;
@@ -213,60 +221,7 @@
   /* width: 100%; */
   background-color: #04724d;
 }
-/* .project:nth-child(1):hover .presentation{
-  padding: 1%;
-  justify-content: space-between;
-  gap: 0;
-}
-.project:nth-child(1):hover .up{
-  height: 50%;
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 5%;
-  position: relative;
-}
-.project:nth-child(1):hover .up p{
-  font-size: 1em;
-  font-weight: bold;
-  color: #fbfbfb;
-  position: absolute;
-  top: 0;
-  left: 0;
-  cursor: pointer;
-  display: block;
-}
-.project:nth-child(1):hover .image{
-  width: 50%;
-  border-radius: 30px;
-}
-.project:nth-child(1):hover .details{
-  display: block;
-  font-size: 1em;
-}
-.project:nth-child(1):hover .description{
-  width: 25%;
-  height: 100%;
-  animation: descript 2s ease-out;
-}
-.project:nth-child(1):hover .down{
-  height: 50%;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-}
-.project:nth-child(1):hover .aside{
-  border: 1px solid #04724D;
-  width: 70px;
-  height: 70px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0 0 20px var(--foreground);
-  animation: go_down 6s ease-out;
-}
- */
+
 @keyframes go_down {
   from {
     transform: translateY(-1500px);
@@ -295,4 +250,137 @@
 .project:nth-child(4):hover {
   height: 100%;
   background-color: #1e3a8a;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1330px) {
+  .title {
+    font-size: 2em;
+  }
+  .title span {
+    font-size: 0.5em;
+  }
+  .button {
+    font-size: 1em;
+    height: 55px;
+  }
+  .presentation {
+    padding: 10%;
+  }
+  .description {
+    height: 210px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .projects {
+    width: 100%;
+  }
+  .title {
+    font-size: 1.6em;
+  }
+  .title span {
+    font-size: 0.8em;
+  }
+  .button {
+    font-size: 0.8em;
+    height: 45px;
+  }
+  .presentation {
+    padding: 5%;
+  }
+  .description {
+    height: 180px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .projects {
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+  }
+  .project {
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+  }
+  .detail {
+    height: 100%;
+  }
+  .detail_view {
+    justify-content: flex-start;
+    gap: 20px;
+  }
+  .detail .up {
+    width: 100%;
+  }
+  .detail .image {
+    width: 50%;
+    border-radius: 10px;
+  }
+  .presentation {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1%;
+    width: 100%;
+    height: 100%;
+  }
+  .project:hover .presentation {
+    gap: 10px;
+  }
+  .description {
+    width: 200px;
+    height: 80%;
+  }
+  .detail .description {
+    width: 100%;
+  }
+  .detail .up {
+    height: 40%;
+  }
+  .detail .down {
+    height: auto;
+    gap: 30px;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+  .detail .aside {
+    flex-direction: row;
+    justify-content: flex-start;
+    height: auto;
+    width: 100%;
+    gap: 20px;
+    animation: go_down 4s ease-out;
+  }
+  @keyframes go_down {
+    from {
+      transform: translateX(-800px);
+    }
+    to {
+      transform: translateX(0);
+    }
+  }
+  .title {
+    font-size: 1.2em;
+  }
+  .title span {
+    font-size: 0.8em;
+  }
+  .button {
+    font-size: 0.8em;
+    height: 45px;
+  }
+  .up,
+  .down {
+    width: 50%;
+  }
+  .up {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .image {
+    width: 45%;
+  }
 }
