Add cv to about page

--- a/app/tools/tools.module.css
+++ b/app/tools/tools.module.css
@@ -254,7 +254,7 @@
     display: block;
     position: sticky;
     top: 0;
-    padding: 5% 2%;
+    padding: 2%;
     margin: 0;
     height: auto;
     font-weight: bold;
