--- a/app/about/about.module.css
+++ b/app/about/about.module.css
@@ -64,6 +64,9 @@
 }
 
 .button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 70%;
   margin-right: 8%;
   border: 1px solid var(--background);
@@ -186,7 +189,7 @@
 
 @media screen and (max-width: 767px) {
   .about {
-    margin: 15% 0;
+    margin: 0;
   }
   .section {
     width: 100%;
@@ -202,7 +205,7 @@
     display: block;
     position: sticky;
     top: 0;
-    padding: 5% 2%;
+    padding: 2%;
     margin: 0;
     height: auto;
     font-weight: bold;
@@ -229,9 +232,7 @@
   .button {
     width: 100%;
     margin: 0;
-    box-shadow: none;
-    animation: none;
-    padding: 0;
+    padding: 10px 20px;
     margin: 0;
   }
 }
